Update print statement from

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
     <div class="개정-기록">
         <strong>📜 규정 개정 및 연혁</strong><br>
-        • 2026.01.06 : [최종 통합] 모든 거래 절대 금지 조항 및 카페 운영 정책 반영<br>
+        • 2026.01.06 : 규정 사이트화<br>
         • 2025.12.05 : 규정 대규모 개정 (운영 권한 및 우회 처벌 강화)<br>
         • 2025.10.26 : 사생활 관련 조항 추가<br>
         • 2025.10.22 : 주의 사항 목록 추가<br>
@@ -449,3 +449,4 @@
 
 </body>
 </html>
+
