--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             --text-main: #f8fafc;
             --text-sub: #94a3b8;
             --border: #334155;
-            --accent: #e11d48; /* Crimson Red */
+            --accent: #00fff0; /* Crimson Red */
             --point: #00fff0; /* Cyan */
             --toc-bg: #1e293b;
             --toc-text: #f8fafc;
@@ -927,3 +927,4 @@
 
 </body>
 </html>
+
