--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>더 스파이크 크로스 통합 규정</title>
+    <title>더 스파이크 소통방 규정</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 
@@ -207,8 +207,8 @@
 <button class="theme-toggle" onclick="toggleTheme()" id="themeBtn">☀️</button>
 
 <header>
-    <h1>더 스파이크 크로스 통합 규정</h1>
-    <p>[더 스파이크 크로스 소통방] 공식 운영 규정 (통합 개정판)</p>
+    <h1>더 스파이크 소통방 규정</h1>
+    <p>[더 스파이크 크로스 소통방] 운영 규정</p>
 </header>
 
 <div class="컨테이너">
@@ -258,7 +258,7 @@
             </div>
             <div class="항-상세">
                 <div class="상세-본문">1. 운영진의 제재나 운영 방식에 대한 이의 제기는 반드시 <span class="강조">1:1 채팅</span>을 통해서만 가능하다.
-2. 공개적인 채팅방에서의 항의, 선동, 비하 행위는 즉시 강제 퇴장 사유가 된다.</div>
+2. 공개적인 채팅방에서의 항의, 선동, 비하 행위는 즉시 강제 퇴장 사유가 됩니다.</div>
             </div>
         </div>
     </div>
@@ -273,8 +273,9 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 존댓말 사용을 원칙으로 하며 비꼬기, 반말, 공격적인 어조, 하대하는 태도를 엄격히 금한다.
-2. 욕설이 포함되지 않았더라도 맥락상 상대를 모욕하거나 조롱할 의도가 다분한 경우 운영진 판단하에 제재한다.</div>
+                <div class="상세-본문">1. [존댓말 원칙] 존댓말 사용을 원칙으로 하며 비꼬기, 반말, 공격적인 어조, 하대하는 태도를 엄격히 금한다.
+2. [맥락적 제재] 직접적인 욕설이나 비속어가 포함되지 않았더라도, 운영진이 판단하기에 맥락상 상대를 모욕, 조롱, 기만할 의도가 다분하거나 분위기를 험악하게 만든다고 간주될 경우 즉시 제재합니다.
+3. [질문 매너] 답변을 당연하게 요구하거나, 공지 확인 안내에도 불구하고 "그냥 알려주면 되지 왜 화내냐"는 식의 적반하장 태도는 운영진 권한으로 즉시 차단될 수 있습니다.</div>
             </div>
         </div>
 
@@ -284,8 +285,9 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 특정 인원 간의 닉네임 언급, 사적인 대화 지속으로 타인의 참여를 배제하는 '친목 행위'를 금한다.
-2. 신규 유입 인원에 대한 무시, 텃세, 배척 행위는 커뮤니티 파괴 행위로 간주하여 엄중히 다룬다.</div>
+                <div class="상세-본문">1. 특정 인원 간의 닉네임 언급, 사적인 과거 회상, "우리끼리만 아는 이야기" 등 폐쇄적인 대화로 타인의 참여를 배제하는 모든 행위를 금합니다.
+2. [텃세 및 무시] 신규 유입 인원의 질문에 대한 고의적 무시, 답변 거부, 기존 멤버들끼리의 유대감을 과시하며 분위기를 주도하는 행위는 '방 파괴 행위'로 간주하여 가장 엄중히 처벌합니다.
+3. [네임드화 금지] 특정 유저를 치켜세우거나 "OO님 오셨다" 식의 추종 분위기를 조성하여 방 내에 보이지 않는 계급이나 서열이 존재하는 듯한 느낌을 주는 행위를 금합니다.</div>
             </div>
         </div>
 
@@ -295,8 +297,10 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 게임과 무관한 개인 신상(나이, 학교, 실명 등)의 공개 및 질문을 금한다.
-2. 개인의 우울함, 불행 호소, 과도한 일상 이야기로 채팅방 분위기를 다운시키거나 위로를 강요하는 행위를 금한다.</div>
+                <div class="상세-본문">1. 본인 및 타인의 신상(나이, 학교, 거주지, 실명, 연락처, 사진 등)을 공개하거나 묻는 행위를 금합니다. 이는 개인 정보 도용 및 범죄 예방을 위한 조치입니다.
+2. [감정 과잉 통제] 개인의 우울함, 사적인 불행, 일상적인 불만 표출로 채팅방 전체의 분위기를 저해하거나 타인에게 위로를 강요하는 행위를 금합니다.
+3. [분쟁 유발 주제 제한] 종교, 젠더, 지역 비하 등 사회적 갈등 소지가 있는 주제를 언급하여 멤버 간의 언쟁을 유도하는 행위를 금합니다.
+4. [반복적 일상 이야기] 게임과 무관한 과도한 일상 공유(식사 메뉴, 일상 생활 등)가 대화의 흐름을 '장시간' 점유하여 정보 공유를 방해할 경우 도배 행위로 간주합니다.</div>
             </div>
         </div>
     </div>
@@ -311,9 +315,10 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. <span class="강조">계정 거래, 대리 플레이, 유료 재화 대리 결제, 기프트카드 교환 등 모든 거래를 절대 금지한다.</span>
-2. 위 항목과 관련된 모든 영리 목적의 행위 및 '단순 언급', '가격 문의' 또한 즉시 제재 대상이다.
-3. 개인 간 거래로 발생한 사기 피해는 관리자가 도움을 줄 수 없으며, 모든 책임은 본인에게 있다.</div>
+                <div class="상세-본문">1. <span class="강조">계정 거래(판매, 구매, 대여), 유료 재화 대리 결제, 기프트카드 교환, 아이템 및 계정의 현금/현물 거래 등 모든 형태의 상업적 행위를 절대 금지합니다.</span>
+2. [대리 행위 엄단] 본인의 계정을 타인에게 맡기거나 타인의 계정을 대신 플레이하는 행위(이벤트 대리, 뽑기 대리 등)를 금합니다. 이는 금전적 대가 여부와 관계없이 사기 방지 및 보안 유지를 위해 **'대리 플레이'**로 간주하여 처벌합니다.
+3. [책임 관계 없음] 개인 간 거래로 발생한 사기 피해는 관리자가 도움을 줄 수 없으며, 모든 책임은 본인에게 있다.
+4. [농담 및 테스트 금지] "장난으로 올려본 거다", "몰랐다"는 변명은 인정되지 않으며, 거래 관련 단어 언급 시 즉각 제재 대상입니다.</div>
             </div>
         </div>
 
@@ -323,8 +328,9 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 기만(비틱): 질문을 가장하여 자신의 행운을 과시하거나 타인에게 박탈감을 주는 행위를 금한다.
-2. 갈라치기: 타 게임/커뮤니티 비교, 특정 캐릭터 비하로 싸움을 붙이는 행위를 금한다.</div>
+                <div class="상세-본문">1. 본인의 획득물이 좋은 것임을 인지하고 있음에도 불구하고 "이거 좋은 건가요?", "저 이거 뽑았어요" 등 질문을 가장하여 행운을 과시하는 행위를 엄금합니다.
+2. [불운 코스프레] 최상급 결과를 얻었음에도 "천장 찍을 뻔했네요(실제로는 아님)", "원하는 건 이게 아닌데 아쉽네요" 식의 소위 '기만질'은 즉시 제재 대상입니다.
+3. </div>
             </div>
         </div>
 
@@ -334,9 +340,10 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 홍보: 타 오픈채팅방, 유튜브, 디스코드 등의 링크 게시 및 유도 행위 금지.
-2. 도배: 의미 없는 자음, 이모티콘 연속 게시(3회 이상), 장문의 복사 붙여넣기 금지.
-3. 유해물: 음란물, 공포/혐오 이미지, 불법 프로그램(핵) 정보 공유 시 <span class="강조">경고 없이 영구 강퇴</span>한다.</div>
+                <div class="상세-본문">1. [홍보 차단] '사전 협의'되지 않은 타 오픈채팅방, 디스코드, 유튜브, 블로그 등의 링크 게시 및 가입 권유 행위를 금합니다. 특히 멤버를 다른 방으로 유도하는 행위는 즉시 퇴장 사유입니다.
+2. [도배 행위] 대화의 흐름을 방해하거나 알림 공해를 유발하는 다음의 행위를 금합니다.
+3. [불법 및 혐오 콘텐츠] 음란물, 잔인하거나 혐오스러운 이미지, 특정 계층에 대한 비하 의미가 담긴 콘텐츠 게시를 엄격히 금합니다.
+4. [부정 행위 옹호] 불법 프로그램(핵, 매크로 등)의 정보 공유뿐만 아니라, 이를 사용한 인증이나 옹호 발언 시 <span class="강조">경고 없이 영구 강퇴</span>합니다.</div>
             </div>
         </div>
     </div>
@@ -347,12 +354,13 @@
 
         <div class="항-그룹">
             <div class="항-클릭" onclick="toggle항(this)">
-                <h3><span class="강조">01</span> 질문 전 검색 및 허위 사실 유포 금지</h3>
+                <h3><span class="강조">01</span> 정보 공유 및 허위 질문 규정</h3>
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 반복적 질문 방지를 위해 공지사항 및 게임 내 도움말 확인을 우선 권장한다.
-2. 검증되지 않은 개인의 추측(뇌피셜)을 공식 정보인 것처럼 유포하여 혼란을 주는 행위를 금한다.</div>
+                <div class="상세-본문">1. [검색] 동일한 질문의 반복은 채팅방의 가독성을 심각하게 저해합니다. 질문 전 공지사항, 공식카페, 이전 대화 내용 검색을 선행해야 하며, 이를 무시한 반복 질문은 제재 대상이 될 수 있습니다.
+2. [확인되지 않은 정보 유포] 공식 발표가 아닌 본인의 추측(뇌피셜), 루머, 유출 정보를 공식 정보인 것처럼 유포하여 혼란을 주는 행위를 금합니다.
+3. [답변 강요 금지] 질문은 자유이나 답변은 의무가 아닙니다. 답변이 없다고 해서 재촉하거나 화를 내는 행위는 **제2조 3항 [질문 매너]**로 간주합니다.</div>
             </div>
         </div>
 
@@ -362,7 +370,10 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 스토리 등 민감한 내용은 반드시 사전 경고 문구를 사용하거나 언급을 자제하여 타인의 게임 경험을 존중해야 한다.</div>
+                <div class="상세-본문">1. 신규 스토리의 반전, 결말, 미공개 캐릭터 대사 및 연출 등 민감한 내용은 스포일러로 간주합니다.
+                    2.[표기 방식 의무] 스포일러를 포함한 대화를 할 경우, 반드시 스포일러 방지 기능을 사용해야 합니다. 이를 어길 시 고의성 여부와 상관없이 메시지 삭제 및 경고 조치합니다.
+                    3.[유출 정보 취급] 정식 업데이트 전 데이터 마이닝 등을 통해 얻은 미공개 정보(유출본)를 공유하는 행위는 발견 즉시 영구 강제 퇴장 대상입니다.
+                </div>
             </div>
         </div>
     </div>
@@ -377,8 +388,9 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 계정 관리 책임은 본인에게 있으며, 부주의로 인한 피해는 운영진이 도와줄 수 없다.
-2. 관리자 사칭 주의: 운영진은 사전에 지정된 이벤트 보상 발송 외에 절대 사적으로 개인정보를 요구하지 않는다.</div>
+                <div class="상세-본문">1. [본인 책임] 계정 관리 및 비밀번호 보호의 책임은 전적으로 본인에게 있습니다. 관리 소홀이나 계정 공유로 발생한 유출/사기 문제는 운영진이 개입하거나 해결해 드리지 않습니다.
+2. [사칭 주의] 방장이나 부방장을 사칭하여 개인정보, 계정 정보, 금전 등을 요구하는 행위는 발견 즉시 차단 및 신고 조치합니다.
+3. [운영진의 권한] 운영진은 자체 이벤트 보상 발송 등 사전에 공지된 특수 상황 외에는 절대 유저에게 비밀번호나 개인 정보를 먼저 요구하지 않습니다.</div>
             </div>
         </div>
 
@@ -388,16 +400,17 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 반드시 식별 가능한 닉네임을 설정해야 하며, 운영진의 변경 요청에 불응 시 퇴장 조치한다.
-2. 사회 통념상 부적절한 닉네임이나 프로필 사진 사용 시 제재 대상이다.</div>
+                <div class="상세-본문">1. [식별] 반드시 식별 가능한 닉네임을 설정해야 합니다. (예: 공백 닉네임, '.' 하나만 있는 닉네임, 중복 닉네임 등 관리자가 구분하기 힘든 설정 금지)
+2. [부적절한 닉네임] 욕설, 비하 발언, 성적인 은어, 특정인 비방, 운영진 사칭 등이 포함된 닉네임이나 프로필 사진 사용 시 운영진의 변경 요청에 즉시 응해야 하며, 불응 시 예고 없이 퇴장 조치합니다.</div>
             </div>
         </div>
     </div>
 
-    <a href="https://discord.gg/J8he2mUFQC" class="디스코드-버튼">🎮 공식 디스코드 서버 입장하기</a>
+    <a href="https://discord.gg/J8he2mUFQC" class="디스코드-버튼"> 소통방 디스코드 서버 입장하기</a>
 
     <div class="개정-기록">
         <strong>📜 규정 개정 및 연혁</strong><br>
+        • 2026.01.18 : 규정 다소 세분화<br>
         • 2026.01.06 : 규정 사이트화<br>
         • 2025.12.05 : 규정 대규모 개정 (운영 권한 및 우회 처벌 강화)<br>
         • 2025.10.26 : 사생활 관련 조항 추가<br>
