--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 특정 인원 간의 닉네임 언급, 사적인 과거 회상, "우리끼리만 아는 이야기" 등 폐쇄적인 대화로 타인의 참여를 배제하는 모든 행위를 금합니다.
+                <div class="상세-본문">1. [대화 독점 금지] 특정 인원 간의 닉네임 언급, 사적인 과거 회상, "우리끼리만 아는 이야기" 등 폐쇄적인 대화로 타인의 참여를 배제하는 모든 행위를 금합니다.
 2. [텃세 및 무시] 신규 유입 인원의 질문에 대한 고의적 무시, 답변 거부, 기존 멤버들끼리의 유대감을 과시하며 분위기를 주도하는 행위는 '방 파괴 행위'로 간주하여 가장 엄중히 처벌합니다.
 3. [네임드화 금지] 특정 유저를 치켜세우거나 "OO님 오셨다" 식의 추종 분위기를 조성하여 방 내에 보이지 않는 계급이나 서열이 존재하는 듯한 느낌을 주는 행위를 금합니다.</div>
             </div>
