--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. <span class="강조">계정 거래(판매, 구매, 대여), 유료 재화 대리 결제, 기프트카드 교환, 아이템 및 계정의 현금/현물 거래 등 모든 형태의 상업적 행위를 절대 금지합니다.</span>
+                <div class="상세-본문">1. <span class="강조">[거래 금지] 계정 거래(판매, 구매, 대여), 유료 재화 대리 결제, 기프트카드 교환, 아이템 및 계정의 현금/현물 거래 등 모든 형태의 상업적 행위를 절대 금지합니다.</span>
 2. [대리 행위 엄단] 본인의 계정을 타인에게 맡기거나 타인의 계정을 대신 플레이하는 행위(이벤트 대리, 뽑기 대리 등)를 금합니다. 이는 금전적 대가 여부와 관계없이 사기 방지 및 보안 유지를 위해 **'대리 플레이'**로 간주하여 처벌합니다.
 3. [책임 관계 없음] 개인 간 거래로 발생한 사기 피해는 관리자가 도움을 줄 수 없으며, 모든 책임은 본인에게 있다.
 4. [농담 및 테스트 금지] "장난으로 올려본 거다", "몰랐다"는 변명은 인정되지 않으며, 거래 관련 단어 언급 시 즉각 제재 대상입니다.</div>
@@ -370,7 +370,7 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 신규 스토리의 반전, 결말, 미공개 캐릭터 대사 및 연출 등 민감한 내용은 스포일러로 간주합니다.
+                <div class="상세-본문">1. [스포일러 방지]신규 스토리의 반전, 결말, 미공개 캐릭터 대사 및 연출 등 민감한 내용은 스포일러로 간주합니다.
                     2.[표기 방식 의무] 스포일러를 포함한 대화를 할 경우, 반드시 스포일러 방지 기능을 사용해야 합니다. 이를 어길 시 고의성 여부와 상관없이 메시지 삭제 및 경고 조치합니다.
                     3.[유출 정보 취급] 정식 업데이트 전 데이터 마이닝 등을 통해 얻은 미공개 정보(유출본)를 공유하는 행위는 발견 즉시 영구 강제 퇴장 대상입니다.
                 </div>
