--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 <span class="아이콘">▼</span>
             </div>
             <div class="항-상세">
-                <div class="상세-본문">1. 본인의 획득물이 좋은 것임을 인지하고 있음에도 불구하고 "이거 좋은 건가요?", "저 이거 뽑았어요" 등 질문을 가장하여 행운을 과시하는 행위를 엄금합니다.
+                <div class="상세-본문">1. [비틱 금지] 본인의 획득물이 좋은 것임을 인지하고 있음에도 불구하고 "이거 좋은 건가요?", "저 이거 뽑았어요" 등 질문을 가장하여 행운을 과시하는 행위를 엄금합니다.
 2. [불운 코스프레] 최상급 결과를 얻었음에도 "천장 찍을 뻔했네요(실제로는 아님)", "원하는 건 이게 아닌데 아쉽네요" 식의 소위 '기만질'은 즉시 제재 대상입니다.
 3. </div>
             </div>
@@ -462,5 +462,6 @@
 
 </body>
 </html>
+
 
 
