--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
 
 <div class="컨테이너">
     <nav class="목차-네비">
-        <a href="#art1" class="목차-링크">운영 권한</a>
-        <a href="#art2" class="목차-링크">소통 매너</a>
-        <a href="#art3" class="목차-링크">거래/행위 금지</a>
-        <a href="#art4" class="목차-링크">정보 및 질문</a>
-        <a href="#art5" class="목차-링크">안전 및 기타</a>
+        <a href="#art1" class="목차-링크">[1] 운영 권한</a>
+        <a href="#art2" class="목차-링크">[2] 소통 매너</a>
+        <a href="#art3" class="목차-링크">[3] 거래/행위 금지</a>
+        <a href="#art4" class="목차-링크">[4] 정보 및 질문</a>
+        <a href="#art5" class="목차-링크">[5] 안전 및 기타</a>
     </nav>
 
     <div class="상단-공지">
@@ -330,7 +330,7 @@
             <div class="항-상세">
                 <div class="상세-본문">1. [비틱 금지] 본인의 획득물이 좋은 것임을 인지하고 있음에도 불구하고 "이거 좋은 건가요?", "저 이거 뽑았어요" 등 질문을 가장하여 행운을 과시하는 행위를 엄금합니다.
 2. [불운 코스프레] 최상급 결과를 얻었음에도 "천장 찍을 뻔했네요(실제로는 아님)", "원하는 건 이게 아닌데 아쉽네요" 식의 소위 '기만질'은 즉시 제재 대상입니다.
-3. </div>
+3. [비교 및 갈라치기] 타 게임이나 타 커뮤니티와의 악의적인 비교, 특정 캐릭터나 특정 플레이 스타일에 대한 비하를 통해 멤버 간의 감정싸움을 유도하는 행위를 금합니다.</div>
             </div>
         </div>
 
@@ -460,6 +460,7 @@
 
 </body>
 </html>
+
 
 
 
